--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "puppeteer": "^23.11.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
