--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "pg": "^8.11.1",
+    "drizzle-orm": "^0.30.0"
   },
   "devDependencies": {
     "@types/node": "^20",
