--- a/package.json
+++ b/package.json
@@ -41,25 +41,27 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.30.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "pg": "^8.11.1",
     "puppeteer": "^23.11.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1",
-    "pg": "^8.11.1",
-    "drizzle-orm": "^0.30.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
