--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
@@ -44,13 +46,14 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.38.3",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "puppeteer": "^23.11.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
